@@ -364,6 +364,20 @@ A time, represented in Python by a ``datetime.time`` instance.
 
     Same as :attr:`DateTime.format`
 
+TimeDelta
+---------
+
+.. class::TimeDelta(string[, converter[, \**options]])
+
+An interval, represented in Python by a ``datetime.timedelta`` instance.
+
+.. attribute:: TimeDelta.converter
+
+    The name of the context key containing the time converter.
+    A time converter is a dictionary with the keys: ``s`` (second), ``m``
+    (minute), ``h`` (hour), ``d`` (day), ``w`` (week), ``M`` (month), ``Y``
+    (year) and the value in second.
+
 Binary
 ------
 
